--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^22.10.0",
+    "@types/node": "^22.10.1",
     "typescript": "^5.7.2"
   },
   "dependencies": {
+    "@iarna/toml": "^2.2.5",
     "openai": "^4.76.0"
   }
 }
