--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^22.10.1",
+    "@types/node": "^22.10.7",
     "typescript": "^5.7.2"
   },
   "dependencies": {
     "@iarna/toml": "^2.2.5",
     "dotenv": "^16.4.7",
+    "fs": "^0.0.1-security",
     "openai": "^4.76.0"
   }
 }
