update create index function

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@iarna/toml": "^2.2.5",
     "dotenv": "^16.4.7",
     "fs": "^0.0.1-security",
-    "openai": "^4.79.4"
+    "openai": "^4.79.4",
+    "zod": "^3.24.1"
   }
 }
