--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -13,6 +13,7 @@
     "next": "15.1.6",
     "prism-react-renderer": "^2.4.1",
     "react": "^19.0.0",
+    "react-diff-viewer-continued": "^3.4.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^9.0.3"
   },
